Initial crawler implementation

--- a/about.html
+++ b/about.html
@@ -28,6 +28,14 @@
         <section class="broken-link-section">
             <h3>Test Case: Internal Link to Missing Sub-resource</h3>
             <p>Meet our team member, who doesn't exist: <a href="team/missing-member.html">John Doe Profile</a></p>
+            <p>Read our company history: <a href="about/history.html">Company History</a></p>
+            <p>View our mission statement: <a href="about/mission.html">Mission Statement</a></p>
+        </section>
+
+        <section class="broken-link-section">
+            <h3>Test Case: External About Links</h3>
+            <p>Press coverage: <a href="https://techcrunch.com/article/missing-article-404">TechCrunch Article</a></p>
+            <p>Awards: <a href="https://awards.example.com/winner/2024/missing">Award Page</a></p>
         </section>
     </main>
 
