--- a/blog.html
+++ b/blog.html
@@ -34,9 +34,16 @@
             <p>This is a valid link to our second post.</p>
         </article>
 
+        <article>
+            <h3><a href="blog/post-3.html">Third Post (Valid)</a></h3>
+            <p>This is a valid link to our third post.</p>
+        </article>
+
         <section class="broken-link-section">
-            <h3>Test Case: Broken Blog Post</h3>
+            <h3>Test Case: Broken Blog Posts</h3>
             <p>Read about our missing post: <a href="blog/post-404.html">Missing Post</a></p>
+            <p>Archive: <a href="blog/archive/2023.html">2023 Archive</a></p>
+            <p>Category: <a href="blog/category/tutorials.html">Tutorials</a></p>
         </section>
     </main>
 
