--- a/contact.html
+++ b/contact.html
@@ -30,6 +30,13 @@
             <p>Visit our partner site (dead domain): <a
                     href="http://partner.non-existent-domain-example-123.com">Partner Site</a></p>
         </section>
+
+        <section class="broken-link-section">
+            <h3>Test Case: Missing Contact Forms</h3>
+            <p>Sales inquiry: <a href="contact/sales-form.html">Sales Form</a></p>
+            <p>Support ticket: <a href="contact/support-ticket.html">Support Form</a></p>
+            <p>Office locations: <a href="contact/locations.html">Our Offices</a></p>
+        </section>
     </main>
 
     <footer>
