--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="services.html">Services</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="pricing.html">Pricing</a>
+        <a href="team.html">Team</a>
+        <a href="resources.html">Resources</a>
+        <a href="faq.html">FAQ</a>
         <a href="contact.html">Contact</a>
         <a href="blog.html">Blog</a>
     </nav>
@@ -38,6 +43,23 @@
         <section class="broken-link-section">
             <h3>Test Case 3: Mixed Content</h3>
             <p>Here is a valid link to <a href="blog.html">our blog</a>.</p>
+        </section>
+
+        <section class="broken-link-section">
+            <h3>Test Case 4: More Internal 404s</h3>
+            <p>Check our <a href="testimonials.html">customer testimonials</a>.</p>
+            <p>Read our <a href="privacy-policy.html">privacy policy</a>.</p>
+            <p>View <a href="careers.html">career opportunities</a>.</p>
+        </section>
+
+        <section class="broken-link-section">
+            <h3>Test Case 5: More External 404s</h3>
+            <p>Follow us on <a href="https://facebook.com/page-not-found-404-test">Facebook</a>.</p>
+            <p>Read our <a href="https://dev.to/nonexistent-author-404">Dev.to articles</a>.</p>
+            <p>Pinterest: <a href="https://pinterest.com/missing-board-404">Pinterest Board</a>.</p>
+            <p>Tumblr: <a href="https://missing-blog.tumblr.com/post/404">Tumblr Post</a>.</p>
+            <p>Flickr: <a href="https://flickr.com/photos/missing-user-404">Flickr Photos</a>.</p>
+            <p>Snapchat: <a href="https://snapchat.com/add/missing-user-404">Snapchat</a>.</p>
         </section>
     </main>
 
