--- a/services.html
+++ b/services.html
@@ -28,6 +28,14 @@
         <section class="broken-link-section">
             <h3>Test Case: Redirect/Old Link</h3>
             <p>Check out our discontinued services: <a href="old-services.html">Legacy Services</a></p>
+            <p>View our service catalog: <a href="services/catalog.html">Service Catalog</a></p>
+            <p>Request a quote: <a href="services/quote-form.html">Quote Form</a></p>
+        </section>
+
+        <section class="broken-link-section">
+            <h3>Test Case: External Service Links</h3>
+            <p>Partner services: <a href="https://partner-services.example.com/404">Partner Portal</a></p>
+            <p>Integration docs: <a href="https://api.example.com/docs/v2/missing">API v2 Docs</a></p>
         </section>
     </main>
 
