--- a/blog.html
+++ b/blog.html
@@ -17,6 +17,11 @@
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="services.html">Services</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="pricing.html">Pricing</a>
+        <a href="team.html">Team</a>
+        <a href="resources.html">Resources</a>
+        <a href="faq.html">FAQ</a>
         <a href="contact.html">Contact</a>
         <a href="blog.html">Blog</a>
     </nav>
@@ -37,6 +42,16 @@
         <article>
             <h3><a href="blog/post-3.html">Third Post (Valid)</a></h3>
             <p>This is a valid link to our third post.</p>
+        </article>
+
+        <article>
+            <h3><a href="blog/post-4.html">Fourth Post (Valid)</a></h3>
+            <p>External resources and references.</p>
+        </article>
+
+        <article>
+            <h3><a href="blog/post-5.html">Fifth Post (Valid)</a></h3>
+            <p>Developer tools and resources.</p>
         </article>
 
         <section class="broken-link-section">
