--- a/legal.html
+++ b/legal.html
@@ -13,8 +13,15 @@
 
     <nav>
         <a href="index.html">Home</a>
-        <a href="legal.html">Legal</a>
+        <a href="about.html">About</a>
+        <a href="services.html">Services</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="pricing.html">Pricing</a>
+        <a href="team.html">Team</a>
+        <a href="resources.html">Resources</a>
+        <a href="faq.html">FAQ</a>
         <a href="contact.html">Contact</a>
+        <a href="blog.html">Blog</a>
     </nav>
 
     <main>
