--- a/team.html
+++ b/team.html
@@ -14,7 +14,12 @@
     <nav>
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
+        <a href="services.html">Services</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="pricing.html">Pricing</a>
         <a href="team.html">Team</a>
+        <a href="resources.html">Resources</a>
+        <a href="faq.html">FAQ</a>
         <a href="contact.html">Contact</a>
         <a href="blog.html">Blog</a>
     </nav>
